<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_text">Hello👋</string>
    <string name="jemal_kakauridze">Jemal Kakauridze</string>
    <string name="search">Search</string>
    <string name="leagues">Leagues</string>
    <string name="heart">Heart</string>
    <string name="hoodie">Hoodie</string>
    <string name="test_price">$120</string>
    <string name="games">Games</string>
    <string name="score_craft">Score Craft</string>
    <string name="welcome_jemal_kakauridze">Welcome Jemal Kakauridze</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="explore_leagues">Explore Leagues</string>
</resources>